--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,9 +1,9 @@
 // ===== FOOTER STYLE ===== //
 .footer {
-  background-color: #2b2f38;
+  background-color: #232731;
   color: set-text-color(#000);
   font-size: 1rem;
-  padding: 1rem;
+  padding: 1rem 0;
   text-align: center;
 
   // MEDIA QUERY
