--- a/css/style.css
+++ b/css/style.css
@@ -90,12 +90,12 @@ a {
   color: #ed1c24;
 }
 .section-heading .section-desc {
-  max-width: 80%;
+  max-width: 90%;
   margin-left: auto;
   margin-right: auto;
   font-size: 1.2rem;
   text-align: center;
-  margin-bottom: 5rem;
+  margin-bottom: 3rem;
 }
 
 .service-title {
@@ -122,7 +122,7 @@ a {
 }
 
 .bcg-header {
-  background-color: #2b2f38cc;
+  background-color: rgba(35, 39, 49, 0.75);
   color: #fff;
 }
 .bcg-header a {
@@ -131,9 +131,9 @@ a {
 
 .btn-home, .btn-more, .btn-contact {
   display: inline-block;
-  width: 200px;
+  width: 180px;
   margin: 0.5rem auto;
-  padding: 1rem;
+  padding: 0.8rem;
   font-size: 0.9rem;
   text-transform: uppercase;
   text-align: center;
@@ -200,9 +200,12 @@ a {
   background-color: #ed1c24;
   transform: scale(1.1);
 }
+.btn-circle:last-child {
+  margin-right: 0;
+}
 
 .btn-contact {
-  margin: 0;
+  margin-top: 1rem;
   background-color: #ed1c24;
   color: #fff;
   border: none;
@@ -284,7 +287,7 @@ a {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  bottom: 50px;
+  bottom: 30px;
 }
 
 .services {
@@ -653,7 +656,7 @@ a {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  gap: 1.5rem;
+  gap: 1rem;
   width: 100%;
 }
 @media (min-width: 1024px) {
@@ -713,10 +716,10 @@ textarea {
 }
 
 .footer {
-  background-color: #2b2f38;
+  background-color: #232731;
   color: #fff;
   font-size: 1rem;
-  padding: 1rem;
+  padding: 1rem 0;
   text-align: center;
 }
 @media (min-width: 1024px) {
